--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,5 @@ include ':opensha-core'
 project(':opensha-core').projectDir = new File(settingsDir, '../opensha-core')
 include ':opensha-ucerf3'
 project(':opensha-ucerf3').projectDir = new File(settingsDir, '../opensha-ucerf3')
+include ':opensha-apps'
+project(':opensha-apps').projectDir = new File(settingsDir, '../opensha-apps')
