--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ dependencies {
 
     /* no remote repo */
     compile files('lib/EventWebService.jar')
-
+    compile files('lib/mysql-connector-java-5.1.16-bin.jar')
+    
     compileOnly project(path: ':opensha-apps', configuration: 'compileOnly')
     compileAndResource project(path: ':opensha-apps')
 
