--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ configurations {
 }
 
 task fatJar(type: Jar, dependsOn: ':opensha-dev:fatJar') {
-    baseName = project.name + '-all'
+    archiveBaseName = project.name + '-all'
     // include all 'api' dependencies
     from {
         configurations.apiResolvable.collect { it.isDirectory() ? it : zipTree(it).matching {
