--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,13 @@ ext {
 
 apply from: '../opensha/build-common.gradle'
 
+repositories {
+    maven {
+        url "https://code.usgs.gov/api/v4/groups/1352/-/packages/maven"
+        name "NSHMP GitLab Group"
+    }
+}
+
 dependencies {
 
     api 'org.xerial:sqlite-jdbc:3.28.0'
